--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,23 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="dashboard">
+      <ion-icon aria-hidden="true" name="speedometer-outline"></ion-icon>
+      <ion-label>Dashboard</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="tracking">
+      <ion-icon aria-hidden="true" name="location-outline"></ion-icon>
+      <ion-label>Seguimiento</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="alerts">
+      <ion-icon aria-hidden="true" name="notifications-outline"></ion-icon>
+      <ion-label>Alertas</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="settings">
+      <ion-icon aria-hidden="true" name="settings-outline"></ion-icon>
+      <ion-label>Configuración</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
