--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -196,7 +196,7 @@
           <ion-icon name="location" color="primary" slot="start"></ion-icon>
           <ion-label>
             <h3>Ubicación actualizada</h3>
-            <p>Hace {{ currentTime }}</p>
+            <p>Hace 2 minutos</p>
           </ion-label>
         </ion-item>
         
